Fixing non-centered nav-bar bug + gap

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -58,7 +58,6 @@
 
     @media (max-width: 768px) {
       padding: 40px 16px;
-      gap: 40px;
     }
   }
 }
@@ -83,8 +82,4 @@
   display: flex;
   flex-direction: column;
   gap: var(--section-gap);
-
-  @media (max-width: 768px) {
-    gap: 40px;
-  }
 }
