--- a/src/components/ui/ColorRamp/ColorRamp.module.scss
+++ b/src/components/ui/ColorRamp/ColorRamp.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  width: min(1024px, 100%);
+  width: min(800px, 100%);
   margin: 0 auto;
 }
 
